--- a/style.css
+++ b/style.css
@@ -2,19 +2,25 @@
   --color-accent: oklch(65% 50% 0);
 }
 
+html {
+  color-scheme: light dark;
+}
+
 body {
   font: 100%/1.5 system-ui;
   max-width: 100ch;
   margin-inline: max(1em, (100% - 100ch) / 2);
   accent-color: var(--color-accent);
+  background-color: Canvas;
+  color: CanvasText;
 }
 
 nav {
+  --border-color: oklch(50% 10% 200 / 40%);
   display: flex;
   justify-content: space-between;
   padding: 0;
   margin: 0 0 1em 0;
-  border-bottom: 1px solid oklch(80% 3% 200);
 }
 
 nav ul,
@@ -31,11 +37,19 @@ nav a {
 }
 
 nav a.current {
-  border-bottom: 0.4em solid oklch(80% 3% 200);
+  border-bottom: 0.4em solid var(--border-color);
   padding-bottom: calc(0.5em - 0.4em);
 }
 
 nav a:hover {
   border-bottom: 0.4em solid var(--color-accent);
-  background-color: oklch(from var(--color-accent) 95% 5% h);
+  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
+}
+
+.color-scheme {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 80%;
+  font-family: inherit;
 }
